# academy-project

./: $GITHUB_ENV  $GITHUB_PATH  .gitignore  README.md  Taskfile.yml  check.bat  db.sqlite3  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml
app_main/: admin.py  forms.py  helpers.py  mixins.py  models.py  perms.py  urls.py
app_main/migrations/: 0001_initial.py  0002_classroom.py  0003_profile_searchrole_profile_searchtxt.py  0004_alter_profile_user.py
app_main/templates/app_main/: allstudents.html  allusers.html  auth.html  classeslist.html  classroom_confirm_delete.html  classroom_edit_form.html  classroom_form.html  index.html  logoutpage.html  newuser.html  profile_confirm_delete.html  profile_form.html  teacherclassroom.html  userdetail.html
app_main/views/: __init__.py  homepage.py  mixins.py
app_main/views/auth/: __init__.py  auth.py
app_main/views/logic/: __init__.py  classroom.py  helpers.py  users.py  views.py
project/: settings.py  urls.py
