[tool.poetry]
name = "academy-project"
version = "0.1.0"
description = ""
authors = ["karmaxa <mikita.karmanaw@gmail.com>"]
readme = "README.md"
packages = [{include = "academy_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
