[tool.poetry]
name = "karmaxa-academy-project"
version = "0.1.0"
description = ""
authors = ["Mikita Karmanaw mikita.karmanaw@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.8.4"
anyio = "^3.6.2"
black = "^23.1.0"
devtools = {extras = ["pygments"], version = "^0.10.0"}
dj-database-url = "^1.2.0"
django = "^4.1.9"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-health-check = "^3.17.0"
django-silk = "^5.0.3"
django-stubs = "^1.15.0"
djangorestframework = "^3.14.0"
dlint = "^0.14.0"
fastapi = "^0.92.0"
flake8 = "^6.0.0"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.0.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.0.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
greenlet = "^2.0.2"
httpie = "^3.2.1"
httpx = "^0.23.3"
ipython = "^8.11.0"
isort = "^5.12.0"
jedi = "^0.18.2"
mypy = "^1.1.1"
orjson = "^3.8.8"
pep8-naming = "^0.13.3"
pip = "^23.0"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
pytest-cov = "^4.0.0"
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
types-dj-database-url = "^1.2.0.1"
types-requests = "^2.28.11.15"
urllib3 = "^1.26.14"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
watchfiles = "^0.18.1"
whitenoise = "^6.4.0"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.artifacts.*
    | .*\.github.*
    | .*\.idea.*
    | .*\.vscode.*
    | .*docs.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".artifacts",
    ".github",
    ".idea",
    ".vscode",
    "docs",
]


[tool.mypy]
cache_dir = ".artifacts/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    ".artifacts",
    ".github",
    ".idea",
    ".vscode",
    "docs",
]
files = ["."]
no_implicit_optional = true
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy",
]


pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.django-stubs]
django_settings_module = "project.settings"
